--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   .btn.primary{background:var(--accent);color:#050714;border-color:var(--accent);box-shadow:0 16px 32px -22px rgba(124,155,255,.9)}
   .btn.ghost{background:rgba(12,15,30,.6);border-color:rgba(124,155,255,.2);padding:7px 12px;line-height:1}
   .btn.icon{width:32px;aspect-ratio:1;border-radius:10px}
-  main.layout{max-width:1200px;margin:0 auto;padding:20px 18px 90px;display:grid;gap:1rem;min-height:calc(100vh - var(--header-h))}
+  main.layout{max-width:1200px;margin:0 auto;padding:20px 18px 90px;display:grid;gap:1rem}
   .grid{display:grid;gap:1rem;align-content:start}
   .col{min-width:0}
   .card{background:var(--elev-1);border:1px solid color-mix(in oklch,var(--accent) 12%,transparent);border-radius:18px;box-shadow:var(--shadow-lg);padding:0;position:relative;overflow:hidden}
@@ -113,7 +113,7 @@
   .card[data-sticky]{top:calc(var(--header-h) + 16px);align-self:start}
   @media (min-width:980px){
     body{overflow:hidden}
-    main.layout{grid-template-columns:minmax(0,1.15fr) minmax(0,.85fr);padding:20px 22px 40px}
+    main.layout{grid-template-columns:minmax(0,1.15fr) minmax(0,.85fr);height:calc(100vh - var(--header-h));padding:20px 22px 40px}
     .col--primary,.col--secondary{min-height:0;overflow:auto;padding-right:.6rem;padding-bottom:1.5rem;scrollbar-gutter:stable both-edges}
     .card{flex:0 0 auto}
   }
